# study-6502

./: .gitignore  LICENSE  README.md
NES-emul/: README.md
chat-gpt/: cpu.cpp  cpu.hpp
dev-docker/: Dockerfile  how-to-build.md
fragments/sdl2/: example.cpp
simple-cpu/: doc
simple-cpu/src/: 6502.cpp
ver1-vibe/: .gitignore  6502_OPCODES.md  CMakeLists.txt  GEMINI.md  cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp  monitor.rom
ver1-vibe/Testing/: cpu_test.cpp  memory_test.cpp  test_adc.cpp  test_and.cpp  test_asl.cpp  test_branches.cpp  test_cmp.cpp  test_cpx_cpy.cpp  test_dec.cpp  test_dex_dey.cpp  test_eor.cpp  test_flag_control.cpp  test_inc.cpp  test_inx_iny.cpp  test_jmp.cpp  test_jsr_rts.cpp  test_lda.cpp  test_ldx.cpp  test_ldy.cpp  test_lsr.cpp  test_ora.cpp  test_pha.cpp  test_php.cpp  test_pla.cpp  test_plp.cpp  test_rol.cpp  test_ror.cpp  test_sbc.cpp  test_sta.cpp  test_stx.cpp  test_sty.cpp  test_system_functions.cpp  test_transfers.cpp
ver2-vibe-not-working/: CMakeLists.txt  GEMINI.md  cpu.cpp  main.cpp  memory.cpp  memory.hpp
ver2-vibe-not-working/ROM/: source.txt
ver2-vibe-not-working/doc/: ver2-change.md
ver3-vibe/: CMakeLists.txt  GEMINI.md  cpu.cpp  cpu.hpp  main.cpp
ver3-vibe/Testing/: cpu_test.cpp
ver3-vibe/disk/: crossfire.dsk
